--- a/workspace/assets/scss/guide.scss
+++ b/workspace/assets/scss/guide.scss
@@ -458,22 +458,24 @@ pre[class*="language-"] {
   &__info {
     display: flex;
     justify-content: end;
+    align-items: center;
     padding: 0 rem(20px);
-    .page-title,
-    .page-data {
+    .pub-list__title,
+    .pub-list__data {
       font-size: 14px;
       font-weight: 600;
-      line-height: 45px;
+      line-height: 25px;
     }
-    .page-title {
-      margin-right: 10px;
-      & ~ .page-title {
-        margin-left: 10px;
-      }
+  }
+
+  &__title {
+    margin-right: 5px;
+    & ~ .pub-list__title {
+      margin-left: 15px;
     }
-    .page-data {
-      font-weight: 400;
-    }
+  }
+  &__data {
+    font-weight: 400;
   }
 
   .pub-table {
